--- a/Blazr.Grid/_Imports.razor
+++ b/Blazr.Grid/_Imports.razor
@@ -8,6 +8,6 @@
 @using Microsoft.JSInterop
 @using Blazr.Grid
 @using Blazr.Grid.Shared
-@using Blazr.Components
+@using Blazr.BaseComponents
 @using Blazr.Grid.Components
 @using System.Diagnostics;
