--- a/Blazr.Grid/Components/TableGrid.razor
+++ b/Blazr.Grid/Components/TableGrid.razor
@@ -45,7 +45,8 @@
         <tr>
             @foreach (var col in GridColumns)
             {
-                @col.ItemHeaderContent;
+                @col.ItemHeaderContent
+                ;
             }
         </tr>
     }
