--- a/Blazr.Grid/Pages/Index.razor
+++ b/Blazr.Grid/Pages/Index.razor
@@ -4,11 +4,7 @@
 
 <h1>Hello, world!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
-
-<Grid TGridItem="City" Items="CityDataProvider.Cities">
+<TableGrid TGridItem="City" Items="CityDataProvider.Cities">
     <GridColumn TGridItem="City" Title="Country">
         @context.Country
     </GridColumn>
@@ -18,7 +14,7 @@ Welcome to your new app.
     <GridColumn TGridItem="City" Title="Actions" Class="text-end">
         <button class="btn btn-primary" @onclick="() => this.Edit(context.Name)" >Edit</button>
     </GridColumn>
-</Grid>
+</TableGrid>
 
 @code {
     private void Edit(string name) {}
