--- a/Blazr.Grid/Components/TableGrid.razor
+++ b/Blazr.Grid/Components/TableGrid.razor
@@ -3,6 +3,7 @@
 @typeparam TGridItem where TGridItem : class
 @implements IComponent
 @implements IHandleEvent
+@attribute [CascadingTypeParameter(nameof(TGridItem))]
 
 <CascadingValue Value="this.RegisterColumn">
     @ChildContent
